Add modern TeamCity workflows & checks, backports some gradle stuff from 1.18.x branch (#9821)